force-app/main/default/objects/Photo__c/fields/Home_Service__c.field-meta.xml
<CustomField>
    <fullName>Home_Service__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Home Service</label>
    <referenceTo>Home_Services__c</referenceTo>
    <relationshipLabel>Photos (Home Service)</relationshipLabel>
    <relationshipName>Photos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>