force-app/main/default/objects/Photo__c/fields/Installation__c.field-meta.xml
<CustomField>
    <fullName>Installation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation</label>
    <referenceTo>Installation__c</referenceTo>
    <relationshipLabel>Photos</relationshipLabel>
    <relationshipName>Photos</relationshipName>
    <type>Lookup</type>
</CustomField>