force-app/main/default/objects/Photo__c/fields/Naming_Convention__c.field-meta.xml
<CustomField>
    <fullName>Naming_Convention__c</fullName>
    <formula>Register_Number__c + &quot; - &quot; +    RecordType.Name  + &quot; - &quot; +  Home_Service__r.First_Name__c +&quot; &quot;+  Home_Service__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Naming Convention</label>
    <type>Text</type>
</CustomField>