force-app/main/default/objects/Photo__c/fields/Register_Number__c.field-meta.xml
<CustomField>
    <fullName>Register_Number__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Register Number</label>
    <type>AutoNumber</type>
</CustomField>