force-app/main/default/objects/Photo__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Photos</relationshipLabel>
    <relationshipName>Photos</relationshipName>
    <type>Lookup</type>
</CustomField>