force-app/main/default/objects/Photo__c/recordTypes/Post_Install.recordType-meta.xml
<RecordType>
    <fullName>Post_Install</fullName>
    <active>true</active>
    <label>Post-Install</label>
</RecordType>