force-app/main/default/objects/Photo__c/recordTypes/Pre_Install.recordType-meta.xml
<RecordType>
    <fullName>Pre_Install</fullName>
    <active>true</active>
    <label>Pre-Install</label>
</RecordType>